formataçao do form

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         <i class="material-icons">vpn_key</i>
                         <input type="password" name="senha" id="isenha" placeholder="Sua senha" autocomplete="current-password" required minlength="8" maxlength="20">
                         <label for="isenha">Senha</label>
-                        <input type="submit" value="Entrar">
-                        <a href="esqueci.html">Esqueci a senha <i class="material-icons">mail</i></a>
+                        <input type="submit" value="Entrar" class="submit">
+                        <a href="esqueci.html" class="botao">Esqueci a senha <i class="material-icons">mail</i></a>
                     </div>
                 </form>
             </div>
